--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>Music Tailor Privacy Policy</title>
+        <title>Music Composer Privacy Policy</title>
     </head>
     <body>
-        <h1>Music Tailor Privacy Policy</h1>
+        <h1>Music Composer Privacy Policy</h1>
         <p>Privacy Policy was last modified on 13-10-218</p>
-        <p>Marei Morsy operates Music Tailor app. This page informs you of my policies regarding the collection, use and disclosure of Personal Information I receive from users of the app.</p>
+        <p>Marei Morsy operates Music Composer app. This page informs you of my policies regarding the collection, use and disclosure of Personal Information I receive from users of the app.</p>
         <p>I use your Personal Information only for providing and improving the app. By using the App you agree to the collection and use of information in accordance with this policy.</p>
         <h2>Information Collection And Use</h2>
         <p>While using my app, I may ask you to provide me with certain personally identifiable information that can be used to contact or identify you. Personally Identifiable information may include, but is not limited to your name (“Personal Information”).</p>
